--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">DemoNimbl3Project</string>
-    <string name="app_survay">Survay</string>
+    <string name="app_survay">SURVAYS</string>
     <string name="action_settings">Settings</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="take_the_survay">Take the survay</string>
 </resources>
