--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">DemoNimbl3Project</string>
     <string name="app_survay">SURVAYS</string>
     <string name="action_settings">Settings</string>
+    <string name="restaurant">Restaurant</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
